--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
     <img src="css/images/logo.png" alt="Knowledge">
     <!-- Navigation -->
     <ul>
-        <li><a href="/home/index.html">Home</a></li>
-        <li><a href="#">Class</a></li>
+        <li><a href="https://knowledge356.github.io/knowledge356/">Home</a></li>
+        <li><a href="https://knowledge356.github.io/class/">Class</a></li>
         <li>
             <a href="#">More</a>
             <!-- Dropdown menu -->
             <ul>
-                <li><a href="/links/links.html">links</a></li>
-                <li><a href="/darkweb/dark.html">Dark Web</a></li>
+                <li><a href="https://knowledge356.github.io/links/">links</a></li>
+                <li><a href="https://knowledge356.github.io/Darkweb/">Dark Web</a></li>
             </ul>
         </li>
     </ul>
@@ -39,10 +39,10 @@
 <div class="content">
     <!-- Div section with link buttons -->
     <div class="link-buttons">
-        <a href="/politics/politics.html">politics</a>
+        <a href="https://knowledge356.github.io/politics/">politics</a>
    
-        <a href="/News/news.html">News</a>
-        <a href="/ai_iamge/aiimage.html">Ai image</a>
+        <a href="https://knowledge356.github.io/news/">News</a>
+        <a href="https://knowledge356.github.io/aiimage/">Ai image</a>
     </div>
 
 
