--- a/index.html
+++ b/index.html
@@ -118,9 +118,14 @@
         <li>Share your creation with others and gather feedback.</li>
     </ol>
 </div>
+<script type="text/javascript">
+var infolinks_pid = 3419614;
+var infolinks_wsid = 0;
+</script>
+<script type="text/javascript" src="http://resources.infolinks.com/js/infolinks_main.js"></script>
 
-
-
+</body>
+</html>
 
 
 
